Fixed spacing for spinner for search results.

--- a/resources/Styles/form.scss
+++ b/resources/Styles/form.scss
@@ -189,6 +189,7 @@
         }
         .loading{
           display: none;
+          margin-top: 10px;
           i{
             font-size: 24px;
             transition: 1s ease-in-out;
